<resources>
    <string name="app_name">Prilagusha</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Авторизация</string>

    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Расписание </string>
    <string name="menu_dailyPlanner">Мои записки</string>
    <string name="menu_creators">О разработчиках</string>
    <string name="menu_ad">Объявления</string>
    <string name="menu_admin">Панель Администратора</string>
    <string name="menu_bopros">Часто задоваемые вопросы</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>