<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.asuapp001.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.asuapp001.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/menu_dailyPlanner"
        android:name="com.example.asuapp001.ui.diaryPrilagusha.diaryPrilagushaFragment"
        android:label="@string/menu_dailyPlanner"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/menu_creators"
        android:name="com.example.asuapp001.fragment_creators"
        android:label="@string/menu_creators"
        tools:layout="@layout/fragment_fragment_creators" />

    <fragment
        android:id="@+id/menu_ad"
        android:name="com.example.asuapp001.ui.ad.AdFragment"
        android:label="@string/menu_ad"
        tools:layout="@layout/fragment_ad" />

    <fragment
        android:id="@+id/menu_admin"
        android:name="com.example.asuapp001.ui.AdminPanel.AdmnimPanel"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admnim_panel" />

    <fragment
        android:id="@+id/menu_bopros"
        android:name="com.example.asuapp001.ui.fragment_bopros"
        android:label="@string/menu_bopros"
        tools:layout="@layout/fragment_bopros" />
</navigation>