<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/menu_dailyPlanner"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_dailyPlanner" />
        <item
            android:id="@+id/news"
            android:icon="@drawable/baseline_news_24"
            android:title="@string/news" />
        <item
            android:id="@+id/menu_ad"
            android:icon="@drawable/baseline_assignment_late_24"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/menu_ad" />

        <item
            android:id="@+id/menu_admin"
            android:icon="@drawable/baseline_admin_panel_settings_24"
            android:title="@string/menu_admin" />
        <item
            android:id="@+id/menu_bopros"
            android:icon="@drawable/baseline_search_24"
            android:title="@string/menu_bopros" />
        <item
            android:id="@+id/menu_creators"
            android:icon="@drawable/baseline_assist_walker_24"
            android:title="@string/menu_creators" />
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_settings" />


    </group>
</menu>